@@ -30,7 +30,7 @@ class Turba_View_Contact
 
     public function html($active = true)
     {
-        global $conf, $prefs, $registry;
+        global $browser, $conf, $registry;
 
         if (!$this->contact ||
             !$this->contact->hasPermission(Horde_Perms::READ)) {
@@ -75,7 +75,7 @@ class Turba_View_Contact
 
         echo '</div>';
 
-        if ($active && $GLOBALS['browser']->hasFeature('dom')) {
+        if ($active && $browser->hasFeature('dom')) {
             if ($this->contact->hasPermission(Horde_Perms::EDIT)) {
                 $edit = new Turba_View_EditContact($this->contact);
                 $edit->html(false);
