@@ -39,6 +39,7 @@ First alpha release for Horde 5.
 v3.0.15-git
 -----------
 
+[mms] Fix infinite loop if array was passed to delete API call.
 [mms] Fix descending sorting of result lists.
 [mms] Return to same page when deleting contact from browse view.
 [mjr] Add ability to return count of objects matching search in place of full
